--- a/css/main.css
+++ b/css/main.css
@@ -40,37 +40,37 @@ header {
 }
 /* visualizer bar animations */
 #r-1 {
-  animation: move_y 2s 2s linear infinite;
+  animation: move_y 1.8s 1ms linear infinite;
 }
 #r-2 {
-  animation: move_y 1.2s 2s linear infinite;
+  animation: move_y 1.2s 1ms linear infinite;
 }
 #r-3 {
-  animation: move_y 1.4s 2s linear infinite;
+  animation: move_y 1.4s 1ms linear infinite;
 }
 #r-4 {
-  animation: move_y 1.6s 2s linear infinite;
+  animation: move_y 1.6s 1ms linear infinite;
 }
 #r-5 {
-  animation: move_y 1.8s 2s linear infinite;
+  animation: move_y 1.8s 1ms linear infinite;
 }
 #r-6 {
-  animation: move_y 1.6s 2s linear infinite;
+  animation: move_y 1.6s 1ms linear infinite;
 }
 #r-7 {
-  animation: move_y 1.4s 2s linear infinite;
+  animation: move_y 1.4s 1ms linear infinite;
 }
 #r-8 {
-  animation: move_y 1.2s 2s linear infinite;
+  animation: move_y 1.2s 1ms linear infinite;
 }
 #r-9 {
-  animation: move_y 2s 2s linear infinite;
+  animation: move_y 1.8s 1ms linear infinite;
 }
 
 @keyframes move_y {
   0% {
     opacity: 0;
-    transform: translateY(0%);
+    transform: translateY(0rem);
   }
   25% {
     opacity: 0.5;
