--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ header {
 }
 /* visualizer border  */
 #Layer_1 {
-  border-bottom: 1px groove #d5d4cf;
+  margin-bottom: -0.75rem;
 }
 
 /* visualizer bar animations */
@@ -107,87 +107,9 @@ header {
   margin: 0.25rem 0;
 }
 
-/* time bar */
-input[type="range"] {
+/* progress bar */
+#progressBar {
   width: 100%;
-  margin: 3.5px 0;
-  background-color: transparent;
-  -webkit-appearance: none;
-}
-input[type="range"]:focus {
-  outline: none;
-}
-input[type="range"]::-webkit-slider-runnable-track {
-  background: #d5d4cf;
-  border: 0;
-  border-radius: 10px;
-  width: 100%;
-  height: 6px;
-  cursor: pointer;
-}
-input[type="range"]::-webkit-slider-thumb {
-  margin-top: -3.5px;
-  width: 13px;
-  height: 13px;
-  background: #d5d4cf;
-  border: 1px solid rgba(0, 0, 0, 0);
-  border-radius: 40px;
-  cursor: pointer;
-  -webkit-appearance: none;
-}
-input[type="range"]:focus::-webkit-slider-runnable-track {
-  background: #e1e0dd;
-}
-input[type="range"]::-moz-range-track {
-  background: #d5d4cf;
-  border: 0;
-  border-radius: 10px;
-  width: 100%;
-  height: 6px;
-  cursor: pointer;
-}
-input[type="range"]::-moz-range-thumb {
-  width: 13px;
-  height: 13px;
-  background: #d5d4cf;
-  border: 1px solid rgba(0, 0, 0, 0);
-  border-radius: 40px;
-  cursor: pointer;
-}
-input[type="range"]::-ms-track {
-  background: transparent;
-  border-color: transparent;
-  border-width: 4.5px 0;
-  color: transparent;
-  width: 100%;
-  height: 6px;
-  cursor: pointer;
-}
-input[type="range"]::-ms-fill-lower {
-  background: #c9c8c1;
-  border: 0;
-  border-radius: 20px;
-}
-input[type="range"]::-ms-fill-upper {
-  background: #d5d4cf;
-  border: 0;
-  border-radius: 20px;
-}
-input[type="range"]::-ms-thumb {
-  width: 13px;
-  height: 13px;
-  background: #d5d4cf;
-  border: 1px solid rgba(0, 0, 0, 0);
-  border-radius: 40px;
-  cursor: pointer;
-  margin-top: 0px;
-  /*Needed to keep the Edge thumb centred*/
-}
-input[type="range"]:focus::-ms-fill-lower {
-  background: #d5d4cf;
-}
-input[type="range"]:focus::-ms-fill-upper {
-  background: #e1e0dd;
 }
 
 /* song current and total timeline */
