--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,6 @@ main {
 
 header {
   text-align: center;
-  font-size: 1.5rem;
   color: #ededec;
   font-family: "Mochiy Pop P One", sans-serif;
   margin: 2rem 0;
@@ -29,14 +28,15 @@ header {
 
 #track-cover {
   text-align: center;
-  max-width: 80%;
-  box-shadow: 0 0 1.5rem #ededec;
+  max-width: 50%;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 1rem #ededec;
 }
 
 /* visualizer bar */
 #visual svg {
   fill: #ededec;
-  max-width: 50%;
+  max-width: 60%;
   text-align: center;
 }
 /* visualizer border  */
@@ -124,7 +124,7 @@ header {
 
 /* control buttons */
 #controls {
-  margin: 2rem 0;
+  margin: 1rem 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -163,14 +163,14 @@ header {
 
 /* song list */
 #songList {
-  padding: 0rem;
+  padding: 0;
 }
 
 #songList li {
   display: flex;
   justify-content: space-between;
   list-style: none;
-  margin-bottom: 1.25rem;
+  margin-bottom: 1rem;
   border-bottom: 1px solid #ededec;
 }
 
@@ -217,14 +217,14 @@ header {
     width: 100%;
   }
 
+  #visual svg {
+    max-width: 40%;
+  }
+
   #songList {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-  }
-
-  #songList li {
-    margin-bottom: 1.75rem;
   }
 
   /* list hover */
@@ -255,7 +255,7 @@ header {
     max-width: 70%;
   }
 
-  #songList li {
-    margin-bottom: 2rem;
+  #visual svg {
+    max-width: 50%;
   }
 }
