change the control buttons size to 40x40px

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,10 @@ header {
   margin: 2rem 0;
 }
 
+.material-icons.md-40 {
+  font-size: 40px;
+}
+
 /* Mobile - 360px */
 #player-area {
   margin-left: 1.25rem;
