--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ header {
 #player-area {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
+  height: auto;
 }
 
 #audio-player {
@@ -40,7 +41,7 @@ header {
 /* visualizer bar */
 #visual svg {
   fill: #ededec;
-  max-width: 60%;
+  max-width: 55%;
   text-align: center;
 }
 /* visualizer border  */
@@ -103,7 +104,7 @@ header {
   margin: 3.5rem 0rem 1.75rem 0rem;
 }
 #song-title {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: bold;
   margin: 0.5rem 0;
 }
@@ -128,7 +129,7 @@ header {
 
 /* control buttons */
 #controls {
-  margin: 1rem 0;
+  margin: 1.25rem 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -168,6 +169,7 @@ header {
 /* song list */
 #songList {
   padding: 0;
+  margin: 0;
 }
 
 #songList li {
@@ -209,20 +211,28 @@ header {
     flex-direction: row;
   }
 
-  #player-area {
-    margin-left: 1.75rem;
-    margin-right: 1.75rem;
+  #player-area,
+  #playerList-area {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     width: 100%;
   }
 
-  #playerList-area {
-    margin-left: 1.75rem;
-    margin-right: 1.75rem;
-    width: 100%;
+  #songList li:last-child {
+    margin-bottom: 0;
+  }
+
+  #track-cover {
+    max-width: 50%;
   }
 
   #visual svg {
-    max-width: 40%;
+    max-width: 50%;
+  }
+
+  #controls {
+    margin-bottom: 0;
   }
 
   #songList {
@@ -248,18 +258,11 @@ header {
 
 /* Large web browser - 960px */
 @media only screen and (min-width: 60rem) {
-  #player-area {
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
-  }
-
-  #playerList-area {
-    margin-left: 3rem;
-    margin-right: 3rem;
-    max-width: 70%;
+  #track-cover {
+    max-width: 40%;
   }
 
   #visual svg {
-    max-width: 50%;
+    max-width: 40%;
   }
 }
